force-app/main/default/objects/Contacts__c/Contacts__c.object-meta.xml
<CustomObject>
    <label>Contacts</label>
    <nameField>
        <label>ID du statut</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>