force-app/main/default/objects/Contacts__c/fields/AvecCarte__c.field-meta.xml
<CustomField>
    <fullName>AvecCarte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avec carte</label>
    <type>Checkbox</type>
</CustomField>