force-app/main/default/objects/Contacts__c/fields/Famille_Statut__c.field-meta.xml
<CustomField>
    <fullName>Famille_Statut__c</fullName>
    <label>Famille Statut</label>
    <length>200</length>
    <type>Text</type>
</CustomField>