force-app/main/default/objects/Contacts__c/fields/FamilleMatrice__c.field-meta.xml
<CustomField>
    <fullName>FamilleMatrice__c</fullName>
    <label>Famille</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0- Souscription</fullName>
            </value>
            <value>
                <fullName>1- Vie de l&#39;abonnement</fullName>
            </value>
            <value>
                <fullName>2 - Club UGC / fidélité</fullName>
            </value>
            <value>
                <fullName>3 - Autres Produits</fullName>
            </value>
            <value>
                <fullName>4 - Réservation</fullName>
            </value>
            <value>
                <fullName>5 - Compte client</fullName>
            </value>
            <value>
                <fullName>6 - Prospection</fullName>
            </value>
            <value>
                <fullName>7 - Finance</fullName>
            </value>
            <value>
                <fullName>8 - Cinéma</fullName>
            </value>
            <value>
                <fullName>9 - Divers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>