force-app/main/default/objects/Contacts__c/fields/Motif_Statut__c.field-meta.xml
<CustomField>
    <fullName>Motif_Statut__c</fullName>
    <label>Motif Statut</label>
    <length>200</length>
    <type>Text</type>
</CustomField>