force-app/main/default/objects/Contacts__c/fields/MotifMatrice__c.field-meta.xml
<CustomField>
    <fullName>MotifMatrice__c</fullName>
    <label>Motif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FamilleMatrice__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>01 - Info process abo</fullName>
            </value>
            <value>
                <fullName>02 - Erreur prise abo</fullName>
            </value>
            <value>
                <fullName>03 - Click and collect</fullName>
            </value>
            <value>
                <fullName>04 - Démat</fullName>
            </value>
            <value>
                <fullName>05 - B2B</fullName>
            </value>
            <value>
                <fullName>06 - VPC</fullName>
            </value>
            <value>
                <fullName>07- Création Abo</fullName>
            </value>
            <value>
                <fullName>01 - Réception carte</fullName>
            </value>
            <value>
                <fullName>02 - Réédition payante</fullName>
            </value>
            <value>
                <fullName>03 - Réédition gratuite</fullName>
            </value>
            <value>
                <fullName>04 - Désabonnement</fullName>
            </value>
            <value>
                <fullName>05 - Résiliation</fullName>
            </value>
            <value>
                <fullName>06 - Migration UI 1/2/3</fullName>
            </value>
            <value>
                <fullName>07 - Réabonnement</fullName>
            </value>
            <value>
                <fullName>08 - Rétention</fullName>
            </value>
            <value>
                <fullName>09 - Retour Carte</fullName>
            </value>
            <value>
                <fullName>10 - Rétractation</fullName>
            </value>
            <value>
                <fullName>11 - Avertissement</fullName>
            </value>
            <value>
                <fullName>12 - Annulation Migration</fullName>
            </value>
            <value>
                <fullName>13 - Annulation Contrat</fullName>
            </value>
            <value>
                <fullName>99 - Autre</fullName>
            </value>
            <value>
                <fullName>01 - Inscription</fullName>
            </value>
            <value>
                <fullName>02 - Solde de points</fullName>
            </value>
            <value>
                <fullName>03 - Echange de points</fullName>
            </value>
            <value>
                <fullName>04 - Fonctionnement Club</fullName>
            </value>
            <value>
                <fullName>01 - Offres UGC</fullName>
            </value>
            <value>
                <fullName>02 - Formules UGC+</fullName>
            </value>
            <value>
                <fullName>03 - Solo</fullName>
            </value>
            <value>
                <fullName>04 - Blue</fullName>
            </value>
            <value>
                <fullName>05 - VLO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>