force-app/main/default/objects/Contacts__c/fields/Nom_du_mod_le_courrier_UU_fran_ais_pdf__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_mod_le_courrier_UU_fran_ais_pdf__c</fullName>
    <label>Nom du modèle courrier UU français(pdf)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>