force-app/main/default/objects/Contacts__c/fields/Nom_du_mod_le_email_UU_fran_ais_HTML__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_mod_le_email_UU_fran_ais_HTML__c</fullName>
    <label>Nom du modèle email UU français(HTML)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>