force-app/main/default/objects/Contacts__c/fields/NomModeleCourrierEmail__c.field-meta.xml
<CustomField>
    <fullName>NomModeleCourrierEmail__c</fullName>
    <inlineHelpText>Renseigner le nom du modèle de courrier SDOCS en format PDF</inlineHelpText>
    <label>Nom du modèle Courrier (PDF)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>