force-app/main/default/objects/Contacts__c/fields/NomModeleEmailHTML__c.field-meta.xml
<CustomField>
    <fullName>NomModeleEmailHTML__c</fullName>
    <inlineHelpText>Renseigner le nom du modèle d&#39;email SDOCS en format HTML</inlineHelpText>
    <label>Nom du modèle Email (HTML)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>