force-app/main/default/objects/Contacts__c/fields/Reponse__c.field-meta.xml
<CustomField>
    <fullName>Reponse__c</fullName>
    <description>Coché lorsque le statut génère l&#39;envoi automatisé d&#39;un email/courrier</description>
    <label>Réponse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manuelle</fullName>
            </value>
            <value>
                <fullName>Semi-automatique</fullName>
            </value>
            <value>
                <fullName>Automatique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>