force-app/main/default/objects/Contacts__c/fields/SousMotif_Statut__c.field-meta.xml
<CustomField>
    <fullName>SousMotif_Statut__c</fullName>
    <label>Sous-Motif Statut</label>
    <length>200</length>
    <type>Text</type>
</CustomField>