force-app/main/default/objects/Contacts__c/fields/TypeTemplate__c.field-meta.xml
<CustomField>
    <fullName>TypeTemplate__c</fullName>
    <label>Type Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZDocTemplate</fullName>
            </value>
            <value>
                <fullName>StandardTemplate</fullName>
                <default>true</default>
                <label>StandardTemplate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>