force-app/main/default/objects/Contacts__c/fields/ValeurALCMEON__c.field-meta.xml
<CustomField>
    <fullName>ValeurALCMEON__c</fullName>
    <label>Valeur ALCMEON</label>
    <length>200</length>
    <type>Text</type>
</CustomField>