force-app/main/default/objects/Contacts__c/validationRules/Contacts_ModeleObligatoiresiAutomatise.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacts_ModeleObligatoiresiAutomatise</fullName>
    <active>true</active>
    <description>Si le contact génère une réponse automatique ou semi automatique alors le nom du modèle est obligatoire</description>
    <errorConditionFormula>AND(
NOT($User.ByPassValidationRule__c),
ISBLANK(NomModeleEmailHTML__c),
ISBLANK(NomModeleCourrierEmail__c),
OR(ISPICKVAL (Reponse__c,&quot;Automatique&quot;),ISPICKVAL(Reponse__c,&quot;Semi-automatique&quot;))
)</errorConditionFormula>
    <errorMessage>Si le statut génère une réponse automatique, merci d&#39;indiquer le nom du modèle Sdocs.</errorMessage>
</ValidationRule>