force-app/main/default/objects/Contacts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FamilleMatrice__c</columns>
    <columns>MotifMatrice__c</columns>
    <columns>SousMotifMatrice__c</columns>
    <columns>Famille_Statut__c</columns>
    <columns>Motif_Statut__c</columns>
    <columns>SousMotif_Statut__c</columns>
    <columns>NomModeleCourrierEmail__c</columns>
    <columns>NomModeleEmailHTML__c</columns>
    <columns>Reponse__c</columns>
    <columns>ValeurALCMEON__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reponse__c</field>
        <operation>equals</operation>
        <value>Automatique</value>
    </filters>
    <label>All</label>
</ListView>